# csv-validator

./: .gitignore  Cargo.toml  README.md
crates/csv-validate/: Cargo.toml  README.md  config.yaml
crates/csv-validate/benches/: bench.rs
crates/csv-validate/src/: main.rs  mod.rs
crates/csv-validate/src/config/: config.rs
crates/csv-validator-core/: Cargo.toml  README.md
crates/csv-validator-core/src/: lib.rs
crates/csv-validator-core/src/readers/: csv_readers.rs  mod.rs
crates/csv-validator-core/src/utils/: csv_utils.rs  mod.rs
crates/csv-validator-core/src/validators/: issue.rs  line_validators.rs  mod.rs
crates/csv-validators/: Cargo.toml
crates/csv-validators/src/: lib.rs
examples/: full_quoted_with_header_semicolon.csv  semi_quoted_with_header.csv  with_header.csv
tools/: csv_generator.py  test_output.csv
