[workspace]
resolver = "2"
members = [
  "crates/*",
]

default-members = [
  "crates/*",
]

[workspace.package]
name = "csv-validator"
version = "0.1.0"
edition = "2021"
authors = ["Jeroen <jeroen@flexworks.eu>"]
description = "CSV Validator"
homepage = "https://github.com/opensourceworks-org/csv-validator"
repository = "https://github.com/opensourceworks-org/csv-validator"
license = "MIT"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1